Soem type safety and other keeping up with the Joneses fixes.